--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,22 @@
 #spring.mvc.view.prefix=/WEB-INF/jsp/
 #spring.mvc.view.suffix=.jsp
 
+spring.datasource.url=jdbc:mysql://localhost:3308/conference_security
+spring.datasource.username=root
+spring.datasource.password=pass
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+##spring.jpa.database-platform=org.hibernate.dialect.MySqlDialect
+#
+spring.ldap.embedded.ldif=classpath:test-server.ldif
+spring.ldap.embedded.base-dn=dc=pluralsight,dc=com
+spring.ldap.embedded.port=8389
+#
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=pluralsight.rahul2022@gmail.com
+spring.mail.password=zxpcglqdwoyscmhx
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+#
+##logging.level.org.springframework.security=DEBUG
